refactor to use DTO pattern