@@ -1,6 +1,7 @@
 package com.natlex.sections.service;
 
-import com.natlex.sections.entity.GeologicalClass;
+import com.natlex.sections.dto.GeologicalClassDTO;
+import com.natlex.sections.dto.SectionDTO;
 import com.natlex.sections.entity.Section;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -15,6 +16,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,10 +31,10 @@ public class ExcelImportService {
     @Async
     public void readExcelData(MultipartFile file, String uuid) {
 
-        try (InputStream inputStream = file.getInputStream(); XSSFWorkbook workbook = new XSSFWorkbook(inputStream);) {
+        try (InputStream inputStream = file.getInputStream(); XSSFWorkbook workbook = new XSSFWorkbook(inputStream)) {
 
             Sheet sheet = workbook.getSheetAt(0);
-            var sections = new ArrayList<Section>();
+            var sections = new ArrayList<SectionDTO>();
 
             for (Row row : sheet) {
                 if (row.getRowNum() == 0) {
@@ -44,20 +46,20 @@ public class ExcelImportService {
                     break;
                 }
 
-                var geologicalClasses = new ArrayList<GeologicalClass>();
+                var geologicalClasses = new ArrayList<GeologicalClassDTO>();
 
                 for (int i = 1; i < row.getPhysicalNumberOfCells(); i += 2) {
                     var className = row.getCell(i).getStringCellValue();
                     var classCode = row.getCell(i + 1).getStringCellValue();
 
-                    var geologicalClass = new GeologicalClass();
+                    var geologicalClass = new GeologicalClassDTO();
                     geologicalClass.setName(className);
                     geologicalClass.setCode(classCode);
                     geologicalClasses.add(geologicalClass);
 
                 }
 
-                var section = new Section();
+                var section = new SectionDTO();
                 section.setName(sectionName);
 
                 // Set the section for each geological class
@@ -67,9 +69,8 @@ public class ExcelImportService {
                 sections.add(section);
             }
 
-            // var test = sections.stream().map((element) -> modelMapper.map(element, Section.class)).toList();
-
-            sectionService.batchInsert(sections);
+            sectionService.batchInsert(sections.stream()
+                    .map((element) -> modelMapper.map(element, Section.class)).collect(Collectors.toList()));
             asyncJobStatusService.updateJobStatus(uuid, "DONE");
 
         } catch (Exception e) {
